--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = "2.6.0" %}
-
+{% set version = '2.7.0' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,32 +9,33 @@ package:
 source:
   fn: R.utils_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/R.utils_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/R.utils/R.utils_{{ version }}.tar.gz
-  sha256: 5d64993d1209b512a4e97f2edecdbc185f4a369ee5fa2e334ed2cf017486470e
+    - {{ cran_mirror }}/src/contrib/R.utils_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/R.utils/R.utils_{{ version }}.tar.gz
+  sha256: f640ba0019d9d6883a1c634d7c9904b013de4c0bdf5d9e3d7ba49fa248b0b033
 
 build:
+  merge_build_host: True  # [win]
   number: 0
   skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
+  host:
     - r-base
     - r-r.methodss3 >=1.7.1
-    - r-r.oo >=1.20.0
-
+    - r-r.oo >=1.21.0
   run:
     - r-base
     - r-r.methodss3 >=1.7.1
-    - r-r.oo >=1.20.0
+    - r-r.oo >=1.21.0
 
 test:
   commands:
-    - $R -e "library('R.utils')"  # [not win]
+    - $R -e "library('R.utils')"           # [not win]
     - "\"%R%\" -e \"library('R.utils')\""  # [win]
 
 about:
@@ -48,3 +48,7 @@ extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - daler
+    - jdblischak
+    - cbrueffer
+    - dbast
